--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <header class="header-top">
         header
     </header>
+    <main class:"main">
+        main
+    </main>
 </body>
 </html>
