added footer and gallery

--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
     <header class="header-top">
         header
     </header>
+    <div class="gallery">
+        <img src="img1.jpg" alt="img-logo">
+        <img src="img2.jpg" alt="img-logo">
+        <img src="img3.jpg" alt="img-logo">
+    </div>
     <main class="main">
         main
     </main>
+    <footer class="footer">
+        footer
+    </footer>
 </body>
 </html>
